src/components/HeroApp/heroApp.module.css
.heroApp {
    display: flex;
    width: 100vw;
    min-height: 100vh;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    @media (min-width: 768px) {
        height: 100vh;
        min-height: 0px;
        max-height: 800px;
        flex-direction: row;
    }
}

.content {
    flex-direction: column;
    padding-top: 20px;
    width: 100%;
    padding-bottom: 20px;
    gap: 60px;

    @media (min-width: 768px) {
        padding-top: 100px;
        width: 45%;
    }

    .text>:last-child{
        font-size: 1.25em;
        @media (min-width:768px) {
            font-size: 0.8em;
        }
    }

    .appImg {
        gap: 10px;
        flex-direction: column;

        @media (min-width: 768px) {
            flex-direction: row;
        }

        >* {
            width: 16vw;
            min-width: 300px;
            height: auto;

            @media (min-width: 768px) {
                min-width: 150px;
            }
        }
    }
}

.iphoneMockup {
    width: 100vw;
    height: auto;
    max-width: 550px;
    margin-bottom: -40px;
    margin-left: -20px;
    object-fit: cover;
    z-index: -9999;
    
    @media (min-width: 768px) {
        position: relative;
        bottom: -90px;
        width: 60vw;
        margin-bottom: -60px;
        margin-left: -70px;
    }
}

